--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kw_calc_ysseo",
-  "version": "0.0.2",
+  "name": "kw_calc_ysseo_repulish",
+  "version": "0.0.1",
   "description": "kw-calc-box",
   "main": "main.js",
   "scripts": {
